<resources>
    <string name="app_name">Gespo</string>
    <string name="">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_time_entry">Time entries</string>
    <string-array name="periodos">
        <item>SEMANAL</item>
        <item>QUINZENAL</item>
        <item>MENSAL</item>
        <item>ANUAL</item>
    </string-array>
    <string-array name="options">
        <item>Timer</item>
        <item>Contador</item>
        <item>Cronômetro</item>
    </string-array>
    <string name="">Search Filter</string>
    <string name="">Search Filter</string>
    <string name="search_filter">Search Filter</string>
    <string name="period">Period</string>
    <string name="date">Date</string>
    <string name="project">Project</string>
    <string name="filter">Filter</string>
    <string name="details">Details</string>
    <string name="hours">Hours</string>
    <string name="actions">Actions</string>
    <string name="hours_total">Hours Total</string>
    <string name="Cpf">CPF</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
