<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_detailofnote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/v_top_menu"
        android:background="@color/primaryLightGrey"
        tools:ignore="MissingConstraints">

        <ImageView
            android:src="@mipmap/gespo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        app:itemBackground="@color/primaryLightGrey"
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />



    <ImageView
        android:id="@+id/iv_gespo_timer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        app:layout_editor_absoluteX="100dp"
        android:src="@drawable/ic_alarm"
        app:layout_constraintTop_toBottomOf="@id/v_top_menu"
        android:contentDescription="icon of clock"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/v_top_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:text="Apontamentos"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_apontamentos"
        />

    <ImageView
        android:id="@+id/iv_gespo_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_editor_absoluteX="340dp"
        android:src="@mipmap/config"
        app:layout_constraintTop_toBottomOf="@id/v_top_menu"
        tools:ignore="MissingConstraints"
        />

    <ImageView
        android:id="@+id/iv_gespo_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/plus"
        app:layout_constraintTop_toBottomOf="@id/v_top_menu"
        tools:ignore="MissingConstraints"
        />

    <ImageView
        android:id="@+id/iv_gespo_line"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_editor_absoluteX="20dp"
        android:src="@mipmap/line"
        app:layout_constraintTop_toBottomOf="@id/tv_apontamentos"
        android:contentDescription="A linha vertical"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toBottomOf="@id/iv_gespo_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:text="@string/details"
        android:textSize="22sp"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_txt_detalhes"
        />


    <TableLayout
        android:id="@+id/tl_table"
        android:layout_width="409dp"
        android:layout_height="350dp"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintTop_toBottomOf="@id/tv_txt_detalhes"
        app:layout_constraintBottom_toTopOf="@+id/cl_baixo"
        android:layout_marginTop="15dp"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:id="@+id/tv_projeto"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:id="@+id/tv_data"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:id="@+id/tv_horas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actions"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:id="@+id/tv_detalhes"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Projeto Gespo"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/2020"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_gravity="center"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Editar"
                android:textColor="#000000"
                android:textSize="12sp"
                android:layout_gravity="center"
                />


           <ImageButton
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:src="@mipmap/iconexcluir"/>
        </TableRow>

    </TableLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/cl_baixo"
        android:background="@color/primaryLightBlue"
        app:layout_constraintBottom_toTopOf="@id/nav_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="250dp"
            android:text="@string/hours_total"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>